--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "nodejs-demoapp",
+  "description": "Simple Node.js Express app for demos",
   "version": "2.2.1",
+  "author": "Ben Coleman",
+  "license": "Apache-2.0",  
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/benc-uk/nodejs-demoapp.git"
+  },  
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
