--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "applicationinsights": "^1.0.0",
     "body-parser": "~1.18.2",
     "cluster": "^0.7.7",
+    "documentdb": "^1.14.1",
+    "dotenv": "^4.0.0",
     "ejs": "~2.5.7",
     "express": "~4.16.2",
     "morgan": "~1.9.0",
