--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,19 +1,59 @@
+resources:
+- repo: self
 queue:
   name: Hosted Linux Preview
+
 variables:
-  image.name: 'apps/nodejs-demoapp'
+  appname: 'nodejs-demoapp'
+  dockerhub-name: 'bencuk'
+  acr-name: 'bcdemo'
+
 steps:
 - task: Docker@0
+  displayName: 'Build an image'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption (52512f28-c6ed-403e-9569-82a9fb9fec91)'
-    azureContainerRegistry: '{"loginServer":"bcdemo.azurecr.io", "id" : "/subscriptions/52512f28-c6ed-403e-9569-82a9fb9fec91/resourceGroups/Demo.Misc/providers/Microsoft.ContainerRegistry/registries/bcdemo"}'
-    imageName: '$(image.name)'
-    includeLatestTag: 'true'
+    containerregistrytype: 'Container Registry'
+    dockerRegistryConnection: 'Docker Hub (bencuk)'
+    imageName: '$(dockerhub-name)/$(appname)'
+    includeLatestTag: true
+
 
 - task: Docker@0
+  displayName: 'Push to Dockerhub'
   inputs:
-    azureSubscription: 'Microsoft Azure Internal Consumption (52512f28-c6ed-403e-9569-82a9fb9fec91)'
-    azureContainerRegistry: '{"loginServer":"bcdemo.azurecr.io", "id" : "/subscriptions/52512f28-c6ed-403e-9569-82a9fb9fec91/resourceGroups/Demo.Misc/providers/Microsoft.ContainerRegistry/registries/bcdemo"}'
+    containerregistrytype: 'Container Registry'
+    dockerRegistryConnection: 'Docker Hub (bencuk)'
     action: 'Push an image'
-    imageName: '$(image.name)'
-    includeLatestTag: 'true'
+    imageName: '$(dockerhub-name)/$(appname)'
+    includeLatestTag: true
+
+
+- task: Docker@0
+  displayName: 'Tag Image for ACR (BuildNumber)'
+  inputs:
+    containerregistrytype: 'Container Registry'
+    action: 'Run a Docker command'
+    customCommand: 'tag $(dockerhub-name)/$(appname) $(acr-name).azurecr.io/apps/$(appname):$(Build.BuildNumber)'
+    enforceDockerNamingConvention: false
+
+
+- task: Docker@0
+  displayName: 'Tag Image for ACR (Latest)'
+  inputs:
+    containerregistrytype: 'Container Registry'
+    action: 'Run a Docker command'
+    customCommand: 'tag $(dockerhub-name)/$(appname) $(acr-name).azurecr.io/apps/$(appname):latest'
+    enforceDockerNamingConvention: false
+
+
+- task: Docker@0
+  displayName: 'Push to Azure Registry'
+  inputs:
+    azureSubscription: 'Azure (AIRS)'
+    azureContainerRegistry: '{"loginServer":"bcdemo.azurecr.io", "id" : "/subscriptions/52512f28-c6ed-403e-9569-82a9fb9fec91/resourceGroups/Demo.Containers/providers/Microsoft.ContainerRegistry/registries/bcdemo"}'
+    action: 'Push an image'
+    imageName: '$(acr-name).azurecr.io/apps/$(appname)'
+    qualifyImageName: false
+    additionalImageTags: '$(Build.BuildNumber)'
+
+
