--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "start-bg": "node server.js &",
+    "test": "npm run start-bg && ./node_modules/.bin/mocha --reporter mocha-junit-reporter ./tests"
   },
   "dependencies": {
     "applicationinsights": "^1.0.2",
@@ -24,5 +26,10 @@
     "mongodb": "~2.2.0",
     "morgan": "~1.9.0",
     "request": "^2.85.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.18.0"
   }
 }
