--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ variables:
   - name: acr-name
     value: bcdemo
   - name: dockerhub-name
-    value: benc-uk
+    value: bencuk
   - name: docker-file
     value: Dockerfile
 
@@ -31,11 +31,11 @@ steps:
 # Run Docker build
 #
 - bash: |
-    docker build . -f $(docker-file) -t $(dockerhub-name)/$(app-name) -t $(acr-name).azurecr.io/apps/$(app-name)
+    docker build . -f $(docker-file) -t $(dockerhub-name)/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(appname):$(Build.BuildNumber)
   displayName: 'Build app as container image'
 
 #
-# Push to ACR
+# Push latest + tagged images to ACR
 #
 - bash: |
     docker login $(acr-name).azurecr.io -u $(acr-name) -p $(acr-password)
@@ -43,9 +43,9 @@ steps:
   displayName: 'Push image to ACR'
 
 #
-# Push to Dockerhub
+# Push latest to Dockerhub
 #
 - bash: |
     docker login -u $(dockerhub-name) -p $(dockerhub-password)
-    docker push $(dockerhub-name)/$(app-name)
+    docker push $(dockerhub-name)/$(app-name):latest
   displayName: 'Push image to Dockerhub'
