--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ variables:
   - group: shared-secrets
 
   - name: app-name
-    value: nodejs-dempapp
+    value: nodejs-demoapp
   - name: acr-name
     value: bcdemo
   - name: dockerhub-name
@@ -31,7 +31,7 @@ steps:
 # Run Docker build
 #
 - bash: |
-    docker build . -f $(docker-file) -t $(dockerhub-name)/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(appname):$(Build.BuildNumber)
+    docker build . -f $(docker-file) -t $(dockerhub-name)/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(app-name):$(Build.BuildNumber)
   displayName: 'Build app as container image'
 
 #
