--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 #
-# Azure Pipeline - Build defintion for demo web apps
-# Build as Docker container image and push to ACR, also push to public Dockerhub
+# Azure Pipeline - Generic build defintion for containerized apps
+# Build as Docker container image and push to ACR
 # Ben C, 2019
 #
 trigger: 
@@ -11,18 +11,14 @@ pool:
   name: Hosted Ubuntu 1604
 
 #
-# NOTE! The shared-secrets variable group must be pre-created and populated
-# - Expected variables: acr-password, dockerhub-password
+# NOTE! - Expected secret variables: acr-password
+# Must use the Azure Pipelines UI to create this before pipeline will run!
 #
 variables:
-  - group: shared-secrets
-
-  - name: app-name
+  - name: imagename
     value: nodejs-demoapp
   - name: acr-name
-    value: bcdemo
-  - name: dockerhub-name
-    value: bencuk
+    value: CHANGEME
   - name: docker-file
     value: Dockerfile
 
@@ -31,7 +27,7 @@ steps:
 # Run Docker build
 #
 - bash: |
-    docker build . -f $(docker-file) -t $(dockerhub-name)/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(app-name):$(Build.BuildNumber)
+    docker build . -f $(docker-file) -t $(acr-name).azurecr.io/$(imagename):latest -t $(acr-name).azurecr.io/$(app-name):$(Build.BuildNumber)
   displayName: 'Build app as container image'
 
 #
@@ -41,11 +37,3 @@ steps:
     docker login $(acr-name).azurecr.io -u $(acr-name) -p $(acr-password)
     docker push $(acr-name).azurecr.io/apps/$(app-name)
   displayName: 'Push image to ACR'
-
-#
-# Push latest to Dockerhub
-#
-- bash: |
-    docker login -u $(dockerhub-name) -p $(dockerhub-password)
-    docker push $(dockerhub-name)/$(app-name):latest
-  displayName: 'Push image to Dockerhub'
