--- a/azure/pipelines/build-acr-dockerhub.yml
+++ b/azure/pipelines/build-acr-dockerhub.yml
@@ -30,7 +30,7 @@ steps:
 # Run Docker build
 #
 - bash: |
-    docker build . -f $(docker-file) -t $(dockerhub-name)/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(imagename):latest -t $(acr-name).azurecr.io/apps/$(app-name):$(Build.BuildNumber)
+    docker build . -f $(docker-file) -t $(dockerhub-name)/$(imagename):latest -t $(acr-name).azurecr.io/apps/$(imagename):latest -t $(acr-name).azurecr.io/apps/$(imagename):$(Build.BuildNumber)
   displayName: 'Build app as container image'
 
 #
@@ -38,7 +38,7 @@ steps:
 #
 - bash: |
     docker login $(acr-name).azurecr.io -u $(acr-name) -p $(acr-password)
-    docker push $(acr-name).azurecr.io/apps/$(app-name)
+    docker push $(acr-name).azurecr.io/apps/$(imagename)
   displayName: 'Push image to ACR'
 
 #
@@ -46,5 +46,5 @@ steps:
 #
 - bash: |
     docker login -u $(dockerhub-name) -p $(dockerhub-password)
-    docker push $(dockerhub-name)/$(app-name):latest
+    docker push $(dockerhub-name)/$(imagename):latest
   displayName: 'Push image to Dockerhub'
