--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,14 +11,18 @@ pool:
   name: Hosted Ubuntu 1604
 
 #
-# NOTE! - Expected secret variables: acr-password
-# Must use the Azure Pipelines UI to create this before pipeline will run!
+# NOTE! The shared-secrets variable group must be pre-created and populated
+# - Expected variables: acr-password, dockerhub-password
 #
 variables:
-  - name: imagename
+  - group: shared-secrets
+
+  - name: app-name
     value: nodejs-demoapp
   - name: acr-name
     value: bcdemo
+  - name: dockerhub-name
+    value: bencuk
   - name: docker-file
     value: Dockerfile
 
@@ -27,7 +31,7 @@ steps:
 # Run Docker build
 #
 - bash: |
-    docker build . -f $(docker-file) -t $(acr-name).azurecr.io/$(imagename):latest -t $(acr-name).azurecr.io/$(imagename):$(Build.BuildNumber)
+    docker build . -f $(docker-file) -t $(dockerhub-name)/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(app-name):latest -t $(acr-name).azurecr.io/apps/$(app-name):$(Build.BuildNumber)
   displayName: 'Build app as container image'
 
 #
@@ -35,5 +39,13 @@ steps:
 #
 - bash: |
     docker login $(acr-name).azurecr.io -u $(acr-name) -p $(acr-password)
-    docker push $(acr-name).azurecr.io/$(imagename)
+    docker push $(acr-name).azurecr.io/apps/$(app-name)
   displayName: 'Push image to ACR'
+
+#
+# Push latest to Dockerhub
+#
+- bash: |
+    docker login -u $(dockerhub-name) -p $(dockerhub-password)
+    docker push $(dockerhub-name)/$(app-name):latest
+  displayName: 'Push image to Dockerhub'
