--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-demoapp",
   "description": "Simple Node.js Express app for demos",
-  "version": "3.6.2",
+  "version": "3.6.3",
   "author": "Ben Coleman",
   "engines": {
     "node": "10.15.0"
@@ -19,13 +19,13 @@
   },
   "dependencies": {
     "applicationinsights": "^1.3.0",
+    "axios": "^0.18.0",
     "body-parser": "~1.18.2",
     "dotenv": "^7.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.4",
     "mongodb": "~2.2.0",
-    "morgan": "~1.9.1",
-    "request": "^2.88.0"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
