--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "mocha-junit-reporter": "^1.18.0"
+    "mocha-junit-reporter": "^1.21.0",
+    "supertest": "^4.0.2"
   }
 }
