--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "scripts": {
     "start": "node server.js",
     "start-bg": "node server.js &",
-    "tests-junit": "./node_modules/.bin/mocha --reporter mocha-junit-reporter --exit ./tests",
-    "tests": "./node_modules/.bin/mocha --exit ./tests"
+    "tests-junit": "mocha --reporter mocha-junit-reporter --exit ./tests",
+    "tests": "mocha --exit ./tests",
+    "tests-postman": "newman run ./tests/postman_collection.json -r junit --timeout 60000 --reporter-junit-export test-results.xml"
   },
   "dependencies": {
     "applicationinsights": "^1.3.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.21.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "newman": "^4.4.1"
   }
 }
