--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nodejs-demoapp",
   "description": "Simple Node.js Express app for demos",
-  "version": "3.8.1",
+  "version": "4.0.0",
   "author": "Ben Coleman",
   "engines": {
-    "node": "10.14.1"
+    "node": "10.16.0"
   },
   "license": "MIT",
   "repository": {
@@ -23,11 +23,14 @@
     "applicationinsights": "^1.3.1",
     "axios": "^0.19.0",
     "body-parser": "~1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "ejs": "~2.6.1",
     "express": "~4.17.1",
+    "express-session": "^1.16.1",
     "mongodb": "~2.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport-azure-ad": "^4.1.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
