Using MS Graph API is pure hell

--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,7 @@
 # ==================================================================
 # Enable Todo mini app 
 # ==================================================================
-#MONGO_CONNSTR=mongodb://localhost:27017
+#TODO_MONGO_CONNSTR=mongodb://localhost:27017
 
 # ==================================================================
 # Enable Weather info page, get a key here https://darksky.net/dev/register
@@ -14,8 +14,8 @@
 #WEATHER_API_KEY=
 
 # ==================================================================
-# Enable AAD auth, if AAD_APP_ID is set, then so must other vars
+# Enable AAD auth, if AAD_APP_ID is set, then so must AAD_APP_SECRET
 # ==================================================================
 #AAD_APP_ID=
 #AAD_APP_SECRET=
-#AAD_TENANT_ID=
+
