Added AAD_REDIRECT_URL_BASE setting for auth flow

--- a/.env.sample
+++ b/.env.sample
@@ -14,8 +14,8 @@
 #WEATHER_API_KEY=
 
 # ==================================================================
-# Enable AAD auth, if AAD_APP_ID is set, then so must AAD_APP_SECRET
+# Enable AAD auth, if AAD_APP_ID is set, then so must other vars
 # ==================================================================
 #AAD_APP_ID=
 #AAD_APP_SECRET=
-
+#AAD_REDIRECT_URL_BASE=
