Support for Cosmos DB, UI tweaks, updated docs

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@
 # Enable Todo mini app 
 # ==================================================================
 #TODO_MONGO_CONNSTR=mongodb://localhost:27017
+#TODO_MONGO_DB=todoDb
 
 # ==================================================================
 # Enable Weather info page, get a key here https://darksky.net/dev/register
