--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-demoapp",
   "description": "Simple Node.js Express app for demos",
-  "version": "4.0.1",
+  "version": "4.2.0",
   "author": "Ben Coleman",
   "engines": {
     "node": "10.16.0"
@@ -28,7 +28,7 @@
     "ejs": "~2.6.1",
     "express": "~4.17.1",
     "express-session": "^1.16.1",
-    "mongodb": "~2.2.0",
+    "mongodb": "^3.2.6",
     "morgan": "~1.9.1",
     "passport-azure-ad": "^4.1.0"
   },
