Update release-appservice.yml for Azure Pipelines

--- a/pipelines/release-appservice.yml
+++ b/pipelines/release-appservice.yml
@@ -27,6 +27,7 @@ stages:
   jobs:
   - deployment: deployToAppService
     displayName: 'Deploy to App Service'
+    environment: 'Test'
 
     pool:
       vmImage: Ubuntu-16.04
