--- a/pipelines/release-appservice.yml
+++ b/pipelines/release-appservice.yml
@@ -17,35 +17,24 @@ variables:
     value: 'bcdemo'
   - name: appservice-plan
     value: 'SharedAppPlanLinux'
+  - name: location
+    value: 'North Europe'
 
 stages:
 - stage: deployTest
   displayName: 'Test'
-
   variables:
-    location: 'North Europe'
     appservice-name: '$(app-name)-test'
-
   jobs:
-  - deployment: deployToAppService
-    displayName: 'Deploy to App Service'
-    environment: 'Test'
+  - template: templates/arm-app-service.yml
+    parameters:
+      envName: Test
 
-    pool:
-      vmImage: Ubuntu-16.04
-
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - checkout: self
-            submodules: true 
-          - task: AzureResourceGroupDeployment@2
-            displayName: 'Deploy Web App Container (ARM)'
-            inputs:
-              azureSubscription: '$(azure-connection)'
-              resourceGroupName: '$(res-group)'
-              location: '$(location)'
-              csmFile: 'azure-arm/app-service/containers/web-app-acr.json'
-              csmParametersFile: 'azure-arm/app-service/containers/web-app-acr.parameters.json'
-              overrideParameters: '-siteName $(appservice-name) -existingPlan $(res-group)/$(appservice-plan) -registryName $(acr-name) -registryPassword $(acr-password) -imageNameTag apps/$(app-name):latest'
+- stage: deployStaging
+  displayName: 'Staging'
+  variables:
+    appservice-name: '$(app-name)-staging'
+  jobs:
+  - template: templates/arm-app-service.yml
+    parameters:
+      envName: Staging
