--- a/pipelines/release-appservice.yml
+++ b/pipelines/release-appservice.yml
@@ -6,6 +6,7 @@ trigger: none
 #
 variables:
   - group: shared-secrets
+  - group: nodejs-demoapp-vars
 
   - name: app-name
     value: 'nodejs-demoapp'
@@ -21,20 +22,79 @@ variables:
     value: 'North Europe'
 
 stages:
+#
+# Test
+#
 - stage: deployTest
   displayName: 'Test'
+
   variables:
     appservice-name: '$(app-name)-test'
+
   jobs:
   - template: templates/arm-app-service.yml
     parameters:
       envName: Test
 
+#
+# Staging
+#
 - stage: deployStaging
   displayName: 'Staging'
+
   variables:
     appservice-name: '$(app-name)-staging'
+
   jobs:
   - template: templates/arm-app-service.yml
     parameters:
       envName: Staging
+
+#
+# Prod
+#
+- stage: deployProd
+  displayName: 'Prod'
+
+  variables:
+    appservice-name: '$(app-name)'
+
+  jobs:
+  - template: templates/arm-app-service.yml
+    parameters:
+      envName: Prod   
+
+  - job: configureProdApp
+    displayName: 'Configure Prod App Settings'
+    pool:
+      vmImage: Ubuntu-16.04
+    steps:
+      - task: AzureCLI@1
+        displayName: 'Set webapp config'
+        inputs:
+          azureSubscription: 'Azure (AIRS)'
+          scriptLocation: inlineScript
+          inlineScript: |
+            az webapp config appsettings set -g $(res-group) -n $(appservice-name) --settings /
+            RELEASE=$(Build.BuildNumber) /
+            MONGO_CONNSTR=$(mongo-db-connstr) /
+            TODO_MONGO_DB=$(mongo-db-name) /
+            APPINSIGHTS_INSTRUMENTATIONKEY=$(app-insights-key) /
+            WEATHER_API_KEY=$(weather-key) /
+            AAD_APP_SECRET=$(aad-app-secret) /
+            AAD_APP_ID=$(aad-app-id) /
+            AAD_REDIRECT_URL_BASE=$(aad-redirect-url) 
+
+  - job: removeNonProd
+    displayName: 'Remove Non Prod Apps'
+    pool:
+      vmImage: Ubuntu-16.04
+    steps:
+      - task: AzureCLI@1
+        displayName: 'Remove Web Apps'
+        inputs:
+          azureSubscription: 'Azure (AIRS)'
+          scriptLocation: inlineScript
+          inlineScript: |
+            az webapp delete -n $(app-name)-staging -g $(res-group)
+            az webapp delete -n $(app-name)-test -g $(res-group) 
