--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tests-postman": "newman run ./tests/postman_collection.json -r junit --timeout 60000 --reporter-junit-export test-results.xml"
   },
   "dependencies": {
-    "applicationinsights": "^1.3.1",
+    "applicationinsights": "^1.4.0",
+    "applicationinsights-native-metrics": "0.0.5",
     "axios": "^0.19.0",
     "body-parser": "~1.19.0",
     "cookie-parser": "^1.4.4",
