--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "mocha": "^6.1.4",
     "mocha-junit-reporter": "^1.22.0",
-    "supertest": "^4.0.2",
-    "newman": "^4.5.0"
+    "newman": "^4.5.0",
+    "supertest": "^4.0.2"
   }
 }
