--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
 #
 - bash: |
     npm install
-    npm run tests-junit
+    npm run test-junit
   displayName: 'Run unit tests with Mocha'
 
 #
