--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "test-postman": "newman run ./tests/postman_collection.json -r junit --timeout 60000 --reporter-junit-export test-results.xml"
   },
   "dependencies": {
-    "applicationinsights": "^1.4.0",
+    "applicationinsights": "^1.6.0",
     "applicationinsights-native-metrics": "0.0.5",
     "axios": "^0.19.0",
     "body-parser": "~1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
-    "ejs": "~2.6.1",
+    "ejs": "^3.0.1",
     "express": "~4.17.1",
     "express-session": "^1.16.1",
     "mongodb": "^3.3.2",
