--- a/kubernetes/app.yaml
+++ b/kubernetes/app.yaml
@@ -1,9 +1,27 @@
 image:
-  repository: bencuk/nodejs-demoapp
-  tag: latest
   pullPolicy: Always
-
-replicaCount: 1
 
 service:
   targetPort: 3000
+
+secretEnv:
+  WEATHER_API_KEY:
+    secretName: nodejs-demoapp
+    secretKey: weatherKey
+  AAD_APP_SECRET:
+    secretName: nodejs-demoapp
+    secretKey: aadAppSecret
+
+env: 
+  TODO_MONGO_CONNSTR: mongodb://db-mongodb
+  APPINSIGHTS_INSTRUMENTATIONKEY: 45f5a949-518c-4216-80bd-6c5632a9342c
+  AAD_APP_ID: 79a5ae6e-58ea-4114-8c42-1fd260b9549c
+  
+ingress:
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: addon-http-application-routing
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+  tls: 
+    enabled: true
+    secretName: kube-benco-io-cert
