--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "applicationinsights": "^1.6.0",
+    "applicationinsights-native-metrics": "0.0.5",
     "axios": "^0.19.0",
     "body-parser": "~1.19.0",
     "cookie-parser": "^1.4.4",
