--- a/src/package.json
+++ b/src/package.json
@@ -30,7 +30,8 @@
     "express": "~4.17.1",
     "mongodb": "^3.3.2",
     "morgan": "~1.9.1",
-    "passport-azure-ad": "^4.1.0"
+    "passport-azure-ad": "^4.1.0",
+    "express-session": "^1.17.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
