--- a/kubernetes/app.yaml
+++ b/kubernetes/app.yaml
@@ -16,7 +16,15 @@ env:
   TODO_MONGO_CONNSTR: mongodb://db-mongodb
   APPINSIGHTS_INSTRUMENTATIONKEY: 45f5a949-518c-4216-80bd-6c5632a9342c
   AAD_APP_ID: 79a5ae6e-58ea-4114-8c42-1fd260b9549c
-  
+
+resources:
+  limits:
+    cpu: 500m
+    memory: 128Mi
+  requests:
+    cpu: 200m
+    memory: 64Mi
+
 ingress:
   enabled: true
   annotations:
