--- a/.github/workflows/build-deploy-aks.yml
+++ b/.github/workflows/build-deploy-aks.yml
@@ -18,49 +18,49 @@ env:
   host: nodejs-demoapp.kube-new.benco.io
 
 jobs:
-  # buildJob:
-  #   runs-on: ubuntu-latest
+  buildJob:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #   - uses: actions/checkout@v1
+    steps:
+    - uses: actions/checkout@v1
       
-  #   - name: Set imageTag variable
-  #     run: |
-  #       echo "echo \"::set-env name=imageTag::$(date +%Y%m%d.%H%M)\"" > vars.sh
-  #       source ./vars.sh
+    - name: Set imageTag variable
+      run: |
+        echo "echo \"::set-env name=imageTag::$(date +%Y%m%d.%H%M)\"" > vars.sh
+        source ./vars.sh
       
-  #   - name: Build the Docker image
-  #     run: docker build . --file ./Dockerfile --build-arg IMAGE_BASE=$imageBase --tag $dockerUser/$imageName:latest --tag $acrName.azurecr.io/apps/$imageName:$imageTag --tag $acrName.azurecr.io/apps/$imageName:latest
+    - name: Build the Docker image
+      run: docker build . --file ./Dockerfile --build-arg IMAGE_BASE=$imageBase --tag $dockerUser/$imageName:latest --tag $acrName.azurecr.io/apps/$imageName:$imageTag --tag $acrName.azurecr.io/apps/$imageName:latest
     
-  #   - name: Dockerhub Login
-  #     uses: Azure/docker-login@v1
-  #     with:
-  #       username: ${{ env.dockerUser }}
-  #       password: ${{ secrets.dockerPassword }} 
+    - name: Dockerhub Login
+      uses: Azure/docker-login@v1
+      with:
+        username: ${{ env.dockerUser }}
+        password: ${{ secrets.dockerPassword }} 
 
-  #   - name: Push to Dockerhub
-  #     run: docker push $dockerUser/$imageName
+    - name: Push to Dockerhub
+      run: docker push $dockerUser/$imageName
       
-  #   - name: ACR Login
-  #     uses: Azure/docker-login@v1
-  #     with:
-  #       login-server: ${{ env.acrName }}.azurecr.io
-  #       username: ${{ env.acrName }}
-  #       password: ${{ secrets.acrPassword }}   
+    - name: ACR Login
+      uses: Azure/docker-login@v1
+      with:
+        login-server: ${{ env.acrName }}.azurecr.io
+        username: ${{ env.acrName }}
+        password: ${{ secrets.acrPassword }}   
             
-  #   - name: Push to ACR
-  #     run: docker push $acrName.azurecr.io/apps/$imageName
+    - name: Push to ACR
+      run: docker push $acrName.azurecr.io/apps/$imageName
 
-  #   - name: Upload vars artifact
-  #     uses: actions/upload-artifact@v1
-  #     with:
-  #       name: vars
-  #       path: ./vars.sh
+    - name: Upload vars artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: vars
+        path: ./vars.sh
 
 # ================================================================
 
   releaseJob:
-    #needs: buildJob
+    needs: buildJob
     env:
       KUBECONFIG_FILE: '${{ secrets.kubeConfig }}'
 
