--- a/kubernetes/app.yaml
+++ b/kubernetes/app.yaml
@@ -28,7 +28,7 @@ resources:
 ingress:
   enabled: true
   annotations:
-    #kubernetes.io/ingress.class: addon-http-application-routing
+    kubernetes.io/ingress.class: addon-http-application-routing
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
   tls: 
     enabled: true
