--- a/.github/workflows/build-deploy-aks.yml
+++ b/.github/workflows/build-deploy-aks.yml
@@ -1,110 +1,80 @@
 name: Build & Deploy AKS
 
 on: 
-  push: 
-    branches: [master]
-  pull_request:
-    branches: [master]
   workflow_dispatch:
-    
+  push: 
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 # Note. Required secrets: dockerPassword, acrPassword & kubeConfig
 
 env:
-  dockerUser: bencuk
-  acrName: bcdemo
-  imageName: nodejs-demoapp
-  imageBase: 12-alpine
-  host: nodejs-demoapp.kube.benco.io
+  DOCKER_USER: bencuk
+  ACR_NAME: bcdemo
+  IMAGE_NAME: nodejs-demoapp
+  INGRESS_DNS_HOST: nodejs-demoapp.kube.benco.io
 
 jobs:
   buildJob:
+    name: Build and ACR Push
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
       
-    - name: Set imageTag variable
-      run: |
-        echo "echo \"::set-env name=imageTag::$(date +%Y%m%d.%H%M)\"" > vars.sh
-        source ./vars.sh
-      
     - name: Build the Docker image
-      run: docker build . --file ./Dockerfile --build-arg IMAGE_BASE=$imageBase --tag $dockerUser/$imageName:latest --tag $acrName.azurecr.io/apps/$imageName:$imageTag --tag $acrName.azurecr.io/apps/$imageName:latest
+      run: docker build . --file ./Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:latest --tag $ACR_NAME.azurecr.io/apps/$IMAGE_NAME:${{ github.run_id }} --tag $ACR_NAME.azurecr.io/apps/$IMAGE_NAME:latest
     
     - name: Dockerhub Login
       uses: Azure/docker-login@v1
       with:
-        username: ${{ env.dockerUser }}
-        password: ${{ secrets.dockerPassword }} 
+        username: ${{ env.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PASSWORD }} 
 
     - name: Push to Dockerhub
-      run: docker push $dockerUser/$imageName
+      run: docker push $DOCKER_USER/$IMAGE_NAME
       
     - name: ACR Login
       uses: Azure/docker-login@v1
       with:
-        login-server: ${{ env.acrName }}.azurecr.io
-        username: ${{ env.acrName }}
-        password: ${{ secrets.acrPassword }}   
+        login-server: ${{ env.ACR_NAME }}.azurecr.io
+        username: ${{ env.ACR_NAME }}
+        password: ${{ secrets.ACR_PASSWORD }}   
             
     - name: Push to ACR
-      run: docker push $acrName.azurecr.io/apps/$imageName
-
-    - name: Upload vars artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: vars
-        path: ./vars.sh
+      run: docker push $ACR_NAME.azurecr.io/apps/$IMAGE_NAME
 
 # ================================================================
 
   releaseJob:
+    name: Deploy to AKS with Helm
     needs: buildJob
     env:
-      KUBECONFIG_FILE: '${{ secrets.kubeConfig }}'
+      KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
 
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v1
 
-    - name: Download vars artifact
-      uses: actions/download-artifact@v1
-      with:
-        name: vars
-
-    - name: Set vars
-      run: source vars/vars.sh
-
     - name: ACR Login
       uses: Azure/docker-login@v1
       with:
-        login-server: ${{ env.acrName }}.azurecr.io
-        username: ${{ env.acrName }}
-        password: ${{ secrets.acrPassword }}  
+        login-server: ${{ env.ACR_NAME }}.azurecr.io
+        username: ${{ env.ACR_NAME }}
+        password: ${{ secrets.ACR_PASSWORD }}  
 
-    - name: Helm install MongoDB
+    - name: Helm install web app
       uses: deliverybot/helm@v1
       with:
         helm: helm3
-        release: db
-        namespace: demoapps
-        chart: https://kubernetes-charts.storage.googleapis.com/mongodb-7.4.6.tgz
-        value-files: ./kubernetes/db.yaml
-
-    - name: Helm install Nodejs-Demoapp
-      uses: deliverybot/helm@v1
-      with:
-        helm: helm3
-        release: nodejs
+        release: vuego
         namespace: demoapps
         chart: https://code.benco.io/helm-charts/webapp-1.2.0.tgz
         value-files: ./kubernetes/app.yaml
         values: |
           image:
-            tag: '${{ env.imageTag }}'
-            repository: ${{ env.acrName }}.azurecr.io/apps/${{ env.imageName }}
-          env:
-            AAD_REDIRECT_URL_BASE: https://${{ env.host }}
+            tag: '${{ github.run_id }}'
+            repository: ${{ env.ACR_NAME }}.azurecr.io/apps/${{ env.IMAGE_NAME }}
           ingress:
-            host: ${{ env.host }}
+            host: ${{ env.INGRESS_DNS_HOST }}
