--- a/kubernetes/app.yaml
+++ b/kubernetes/app.yaml
@@ -11,9 +11,11 @@ secretEnv:
   AAD_APP_SECRET:
     secretName: nodejs-demoapp
     secretKey: aadAppSecret
+  TODO_MONGO_CONNSTR: 
+    secretName: nodejs-demoapp
+    secretKey: mongoConnString
 
 env: 
-  TODO_MONGO_CONNSTR: mongodb://db-mongodb
   APPINSIGHTS_INSTRUMENTATIONKEY: 45f5a949-518c-4216-80bd-6c5632a9342c
   AAD_APP_ID: 79a5ae6e-58ea-4114-8c42-1fd260b9549c
 
