--- a/.github/workflows/cd-release-aks.yml
+++ b/.github/workflows/cd-release-aks.yml
@@ -52,9 +52,19 @@ jobs:
     name: Deploy to AKS with Helm
     needs: build-app
     runs-on: ubuntu-latest
+    outputs:
+      deployment_id: ${{ steps.deploy.outputs.deployment_id }}
 
     steps:
       - uses: actions/checkout@v1
+
+      - name: "Start deployment"
+        id: deploy
+        uses: chrnorm/deployment-action@v1.2.0
+        with:
+          ref: ${{ github.event.ref }}
+          token: ${{ github.token }}
+          environment: AKS - ${{ env.HELM_RELEASE }}
 
       - name: Login to Azure
         uses: azure/login@v1
@@ -74,6 +84,14 @@ jobs:
           --values ./kubernetes/app.yaml \
           --set image.tag=latest,image.repository=${{ env.IMAGE_REG }}/${{ env.IMAGE_REPO }},env.AAD_REDIRECT_URL_BASE=https://${{ env.INGRESS_DNS_HOST }},ingress.host=${{ env.INGRESS_DNS_HOST }}
 
+      - name: "End deployment - failure"
+        if: ${{ failure() }}
+        uses: chrnorm/deployment-status@v1.0.0
+        with:
+          token: ${{ github.token }}
+          state: failure
+          deployment_id: ${{ needs.deploy-bicep.outputs.deployment_id }}
+
   #
   # Post deployment testing stage
   #
@@ -91,3 +109,20 @@ jobs:
         run: |
           npm install newman --silent
           node_modules/newman/bin/newman.js run src/tests/postman_collection.json --global-var apphost=${{ env.INGRESS_DNS_HOST }}
+
+      - name: "End deployment - success"
+        if: ${{ success() }}
+        uses: chrnorm/deployment-status@v1.0.0
+        with:
+          token: ${{ github.token }}
+          state: success
+          deployment_id: ${{ needs.deploy-aks.outputs.deployment_id }}
+          environment_url: https://${{ env.INGRESS_DNS_HOST }}
+
+      - name: "End deployment - failure"
+        if: ${{ failure() }}
+        uses: chrnorm/deployment-status@v1.0.0
+        with:
+          token: ${{ github.token }}
+          state: failure
+          deployment_id: ${{ needs.deploy-bicep.outputs.deployment_id }}
