--- a/.github/workflows/cd-release-webapp.yaml
+++ b/.github/workflows/cd-release-webapp.yaml
@@ -65,7 +65,7 @@ jobs:
         with:
           ref: ${{ github.event.ref }}
           token: ${{ github.token }}
-          environment: App Service ${{ env.APP_NAME }}
+          environment: App Service - ${{ env.APP_NAME }}
 
       - name: "Run Bicep compiler"
         run: |
@@ -90,6 +90,14 @@ jobs:
           template: ./infra/webapp.json
           parameters: webappName=${{ env.APP_NAME }} webappImage=${{ env.IMAGE_REG }}/${{ env.IMAGE_REPO }}:${{ github.run_id }} weatherKey=${{ secrets.WEATHER_API_KEY }}
           deploymentName: webapp-deploy-${{ github.run_id }}
+
+      - name: "End deployment - failure"
+        if: ${{ failure() }}
+        uses: chrnorm/deployment-status@v1.0.0
+        with:
+          token: ${{ github.token }}
+          state: failure
+          deployment_id: ${{ needs.deploy-bicep.outputs.deployment_id }}
 
   #
   # Post deployment testing stage
