--- a/.github/workflows/cd-release-webapp.yaml
+++ b/.github/workflows/cd-release-webapp.yaml
@@ -16,10 +16,10 @@ on:
 env:
   IMAGE_REG: ghcr.io
   IMAGE_REPO: benc-uk/nodejs-demoapp
-  APP_NAME: nodeappbc
+  APP_NAME: nodejs-demoapp
   ARM_SUB_ID: 52512f28-c6ed-403e-9569-82a9fb9fec91
-  ARM_REGION: northeurope
-  ARM_RES_GROUP: release-nodejs-demoapp
+  ARM_REGION: westeurope
+  ARM_RES_GROUP: apps
 
 jobs:
   #
