--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -1,8 +1,8 @@
 name: CI Build App
 
 on:
-  push:
-    branches-ignore: [master]
+  # push:
+  #   branches-ignore: [master]
   pull_request:
 
 jobs:
